--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,80 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* Universal Styles */
+@import url("https://fonts.googleapis.com/css2?family=Quicksand&display=swap"); /* Hero Style */
+
+* {
+  box-sizing: border-box;
+  font-weight: "Quicksand", Arial, Helvetica, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  padding: 0;
+  margin: 0;
+}
+
+/* App Style */
+.app {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  background-color: #111;
+  color: #999;
+  /* margin-top: 10px; */
+}
+
+/* Hero style */
+.movie-carousel-container {
+  width: 100vw;
+  background-color: transparent;
+}
+
+.movie-poster {
+  height: 300px;
+  border: #333 1px solid;
+  border-radius: 5px;
+  box-shadow: 2px 2px 4px #333;
+  overflow: hidden;
+}
+
+.movie-poster > img {
+  height: 100%;
+  width: 100%;
+}
+
+.movie-card-container {
+  height: 80vh;
+  background-color: #111;
+}
+
+.movie-card {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: left;
+  align-content: center;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0),
+      rgba(0, 0, 0, 1)
+    ),
+    var(--img);
+}
+
+.movie-detail {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  max-width: 800px;
+}
+
+.movie-title {
+  padding-top: 30px;
+  color: white;
+  display: flex;
+  align-items: center;
+  text-shadow: 2px 2px 4px #111;
 }
