--- a/src/index.css
+++ b/src/index.css
@@ -78,3 +78,27 @@ body {
   align-items: center;
   text-shadow: 2px 2px 4px #111;
 }
+
+.movie-buttons-container {
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.play-button-icon {
+  font-size: 2rem;
+  color: white;
+  transition: ease-in 0.5s;
+  cursor: pointer;
+  padding-right: 20px;
+}
+
+.play-button-icon:hover {
+  color: purple;
+  transform: scale(0.9);
+}
+
+.react-player-container {
+  height: 90vh;
+}
